--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,25 @@
 ---
+import BlogPost from "../components/BlogPost.astro";
+import { siteConfig } from "../config/site-config";
 import MainLayout from "../layouts/MainLayout.astro";
 ---
 
 <MainLayout title="Rody's Blog">
-  <h1 class="text-white">Welcome to Rody's Blog</h1>
+  <!-- component -->
+  <section class="bg-white dark:bg-gray-900">
+    <div class="container px-6 py-10 mx-auto">
+      <h1
+        class="text-3xl font-semibold text-gray-800 capitalize lg:text-4xl dark:text-white"
+      >
+        {siteConfig.title}
+      </h1>
+
+      <div class="grid grid-cols-1 gap-8 mt-8 md:mt-16 md:grid-cols-2">
+        <BlogPost />
+        <BlogPost />
+        <BlogPost />
+        <BlogPost />
+      </div>
+    </div>
+  </section>
 </MainLayout>
