Refactor: Simplify BlogLayout by removing unused props and styles

--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -1,14 +1,13 @@
 ---
 import { ClientRouter } from "astro:transitions";
 import "../styles/global.css";
-import "../styles/blog.css";
 
 // interface Props {
 //   title?: string;
 // }
 
-const { title, ...rest } = Astro.props;
-const frontmatter  = rest.frontmatter || {};
+const { title } = Astro.props;
+// const frontmatter  = rest.frontmatter || {};
 ---
 
 <html lang="es">
@@ -17,14 +16,13 @@ const frontmatter  = rest.frontmatter || {};
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>{frontmatter.title}</title>
+    <title>{title}</title>
 
     <ClientRouter />
   </head>
   <body class="bg-gray-900">
-    <a href="/">Regresar</a>
-
     <main class="mb-10 max-w-5xl m-auto p-2">
+      <a href="/" id="btn-back">Regresar</a>
       <slot />
     </main>
   </body>
