--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,6 +18,8 @@ const blogPosts = await getCollection("blog")
         {siteConfig.title}
       </h1>
 
+      <a href="/blog/1">Blog Paginado</a>
+
       <div class="grid grid-cols-1 gap-8 mt-8 md:mt-16 md:grid-cols-2">
         {blogPosts.map((post) => (
           <TypedBlogPost post={post} />
@@ -26,3 +28,13 @@ const blogPosts = await getCollection("blog")
     </div>
   </section>
 </MainLayout>
+
+
+<style>
+  @reference "@styles/global.css";
+
+  a {
+    @apply text-blue-500 hover:underline;
+  }
+
+</style>
