Fix: Update blog title from 'Fernando's Blog' to 'Rody's Blog' and correct stylesheet reference

--- a/src/pages/blog/[page].astro
+++ b/src/pages/blog/[page].astro
@@ -16,7 +16,7 @@ const { page } = Astro.props;
 <MainLayout>
   <div class="py-10 mx-auto">
     <h1 class="text-3xl font-semibold capitalize lg:text-4xl text-white">
-      Fernando's Blog paginado
+      Rody's Blog paginado
     </h1>
   </div>
 
@@ -38,8 +38,8 @@ const { page } = Astro.props;
 </MainLayout>
 
 <style>
-  @reference "tailwindcss"
-|
+  @reference "@styles/global.css";
+
   a {
     @apply bg-blue-500 text-white p-2 rounded hover:bg-blue-600 cursor-pointer;
   }
