Fix: Filter blog posts to exclude drafts in index.astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import { siteConfig } from "../config/site-config";
 import MainLayout from "../layouts/MainLayout.astro";
 import TypedBlogPost from "src/components/TypedBlogPost.astro";
 
-const blogPosts = await getCollection("blog")
+const blogPosts = await getCollection("blog", (post) => post.data.isDraft === false);
 
 ---
 
