--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -49,7 +49,7 @@ const author = responseAuthor?.data;
         />
 
         <div class="flex flex-col ml-5">
-          <a href="#">{author.name}</a>
+          <a href={`/blog/${frontmatter.author.id}`}>{author.name}</a>
           <span class="text-xs text-gray-200">{Formatter.formatDate(frontmatter.date)}</span>
         </div>
       </div>
