--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ const blogPosts = await getCollection("blog", (post) => post.data.isDraft === fa
 
 <MainLayout title="Rody's Blog">
   <!-- component -->
-  <section class="bg-white dark:bg-gray-900">
+  <section class="bg-gray-900">
     <div class="container px-6 py-10 mx-auto">
       <h1
         class="text-3xl font-semibold text-gray-800 capitalize lg:text-4xl dark:text-white"
@@ -19,6 +19,7 @@ const blogPosts = await getCollection("blog", (post) => post.data.isDraft === fa
       </h1>
 
       <a href="/blog/1">Blog Paginado</a>
+      <a href="/authors" class="ml-3">Autores</a>
 
       <div class="grid grid-cols-1 gap-8 mt-8 md:mt-16 md:grid-cols-2">
         {blogPosts.map((post) => (
